--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.1", features = ["derive"] }
 fern = "0.6.2"
+humantime = "2.1.0"
 log = "0.4.20"
 
 [profile.release]
